crates/tools/cron/src/tests/unit/snapshots/cron__tests__unit__date__multiple__specifier__all.snap
---
source: crates/tools/cron/src/tests/unit/date.rs
expression: result
---
Err(
    Error(
        Error {
            inner: [
                Invalid(
                    ",*",
                    '-',
                ),
                Nom(
                    "1,*",
                    Alt,
                ),
            ],
        },
    ),
)
