crates/tools/cron/src/tests/unit/snapshots/cron__tests__unit__date__multiple__specifier__all_periodic.snap
---
source: crates/tools/cron/src/tests/unit/date.rs
expression: result
---
Err(
    Error(
        Error {
            inner: [
                Invalid(
                    ",*/2",
                    '-',
                ),
                Nom(
                    "1,*/2",
                    Alt,
                ),
            ],
        },
    ),
)
