crates/tools/cron/src/tests/unit/snapshots/cron__tests__unit__date__multiple__specifier__range_periodic.snap
---
source: crates/tools/cron/src/tests/unit/date.rs
expression: result
---
Err(
    Error(
        Error {
            inner: [
                Invalid(
                    ",2-3/2",
                    '-',
                ),
                Nom(
                    "1,2-3/2",
                    Alt,
                ),
            ],
        },
    ),
)
